--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.7",
+        "bootstrap": "^5.2.3"
     }
 }
