--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,10 @@
         "laravel/fortify": "^1.16",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
+        "laravel/scout": "^10.0",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^2.12"
+        "livewire/livewire": "^2.12",
+        "teamtnt/laravel-scout-tntsearch-driver": "^12.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
